Fix user menu alignment in UI

--- a/frontend/css/post.css
+++ b/frontend/css/post.css
@@ -753,7 +753,7 @@ body:has(.user-feed-shell) {
 }
 
 .user-feed-shell .feed-main-section {
-    padding-left: 0;
+    padding-left: 24px;
     padding-right: 24px;
 }
 
